# vulkhan

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets-windows.json  CMakePresets.json  CMakePresetsw.json  README.md  compile_commands.json  flake.nix  flamegraph.sh  pkgsdeb.md  result  shell.nix  vcpkg-configuration.json  vcpkg.json  vulkhan.excalidraw
.forgejo/workflows/: build.yml
cmake/: FindENet.cmake
modding/: CMakeLists.txt  absurdCheat.cpp  betterNothing.cpp  flake.nix  std.hpp  wasm64-toolchain.cmake
models/: animTest.glb  blackboard.mtl  corridor_west.blend  cross.glb  cube.glb  dagger1.blend  dungeonAssets.glb  env.glb  featherDuckGuard.glb  ghost.glb  ghostface.glb  hallway.glb  hugo.glb  kekwsandworm.glb  leafsandworm.glb  living-room.mtl  manorcore.glb  mujina.glb  piano-decent.glb  room.glb  surf.glb  sword.glb  westwingassets.glb
server/: main.cpp  packet.hpp  servermain.cpp
shaders/: axes.frag  axes.vert  culling.comp  entities.frag  entities.vert  entity.vert  font.frag  font.vert  freezeAnimation.frag  freezeAnimation.vert  fullscreenQuad.vert  globalUbo.glsl  hud.frag  hud.vert  ifft_horizontal.comp  ifft_vertical.comp  lines.frag  lines.vert  particles.comp  particles.frag  particles.vert  pointLight.frag  pointLight.vert  point_light.frag  postProcessing.comp  radix-2.comp  shader.frag  skybox.frag  skybox.vert  solidColor.vert  solidColorLines.frag  solidColorLines.vert  solidColorTriangles.frag  solidColorTriangles.vert  text.frag  text.vert  water.frag  water.vert  waterfreq.comp
shaders/ifft/: bitReversal.comp  butterfly.comp  horizontalStepInverseFFT.comp  permute.comp  precomputeTwiddleFactorAndInputIndices.comp  scale.comp  verticalStepInverseFFT.comp
shaders/smoke/: fluid.comp  pressureSolve.comp  smoke.frag  smoke.vert
shaders/water/: baseWaveHeightField.comp  constants.glsl  normalize.comp  postFFT.comp  preFFT.comp  reduction_stage0.comp  reduction_stage1.comp  update_master.comp  water.frag  water.tesc  water.tese  water.vert
sounds/: Enter Remollon.opus  Rhorhorho.m4a  Rhorhorho.opus  gamesong-015.opus
src/: UI.cpp  UI.hpp  details.hpp  device.cpp  device.hpp  dungeonGenerator.cpp  dungeonGenerator.hpp  init.cpp  init.hpp  main.cpp  modding.cpp  modding.hpp  network.cpp  network.hpp  pipeline.cpp  pipeline.hpp  rng.hpp  sabl.cpp  sabl.hpp  terrainGen.cpp  terrainGen.hpp
src/UI/: bindEdit.hpp  button.cpp  button.hpp  canvas.cpp  canvas.hpp  clickable.cpp  clickable.hpp  emptyRect.cpp  emptyRect.hpp  filePicker.cpp  filePicker.hpp  line.cpp  line.hpp  polyLine.cpp  polyLine.hpp  polygon.cpp  polygon.hpp  rectImg.cpp  rectImg.hpp  scrollable.cpp  scrollable.hpp  slider.cpp  slider.hpp  stylizedBtn.cpp  stylizedBtn.hpp  text.cpp  text.hpp  textInput.cpp  textInput.hpp
src/bosses/: featherDuckGuard.cpp  featherDuckGuard.hpp
src/entities/bosses/: featherDuckGuard.cpp  featherDuckGuard.hpp
src/items/: inventory.hpp  item.cpp  item.hpp  propertyAct.cpp  propertyAct.hpp
src/vkh/: AudioFile.h  AxisAlignedBoundingBox.hpp  audio.cpp  audio.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  cleanup.cpp  cleanup.hpp  cleanupVulkan.cpp  cleanupVulkan.hpp  controller.cpp  controller.hpp  debug.hpp  descriptors.cpp  descriptors.hpp  deviceHelpers.cpp  deviceHelpers.hpp  dungeonGenerator.cpp  dungeonGenerator.hpp  ecs.hpp  engineContext.hpp  entity.cpp  entity.hpp  exepath.hpp  frameInfo.hpp  gameObject.cpp  gameObject.hpp  image.cpp  image.hpp  init.cpp  init.hpp  initVulkan.cpp  initVulkan.hpp  input.cpp  input.hpp  mesh.cpp  mesh.hpp  model.cpp  (+13 more)
src/vkh/systems/: axes.cpp  axes.hpp  axesSys.cpp  entities.cpp  entities.hpp  entity.cpp  entitySys.cpp  entitySys.hpp  font.cpp  font.hpp  freezeAnimation.cpp  freezeAnimation.hpp  freezeAnimationSys.cpp  freezeAnimationSys.hpp  hud.cpp  hud.hpp  hudElements.hpp  objRenderSys.cpp  objRenderSys.hpp  particles.cpp  particles.hpp  physics.cpp  physics.hpp  pointLight.cpp  pointLight.hpp  pointLightSys.cpp  point_light_system.cpp  point_light_system.hpp  postProcessing.cpp  postProcessing.hpp  simple_render_system.cpp  simple_render_system.hpp  skybox.cpp  skybox.hpp  smoke.cpp  smoke.hpp  system.hpp  water.cpp  water.hpp
src/vkh/systems/entity/: entities.cpp  entities.hpp  entity.cpp  entity.hpp
src/vkh/systems/hud/: drawInfo.hpp  element.cpp  element.hpp  hud.cpp  hud.hpp  hudElements.hpp  solidColor.cpp  solidColor.hpp  text.cpp  text.hpp  view.cpp
src/vkh/systems/hud/elements/: button.cpp  button.hpp  canvas.cpp  canvas.hpp  clickable.cpp  clickable.hpp  clipboardImage.hpp  colorPicker.hpp  drawInfo.hpp  element.cpp  element.hpp  emptyRect.cpp  emptyRect.hpp  eventListener.hpp  filePicker.cpp  filePicker.hpp  line.cpp  line.hpp  polyLine.cpp  polyLine.hpp  polygon.cpp  polygon.hpp  rect.cpp  rect.hpp  rectImg.cpp  rectImg.hpp  slider.cpp  slider.hpp  text.cpp  text.hpp  textInput.cpp  textInput.hpp  view.cpp  view.hpp
src/vkh/systems/smoke/: fluidGrid.cpp  fluidGrid.hpp  smoke.cpp  smoke.hpp
src/vkh/systems/water/: WSTessendorf.cpp  WSTessendorf.hpp  mesh.hpp  skyModel.cpp  skyModel.hpp  skyPreetham.cpp  skyPreetham.hpp  water.cpp  water.hpp  waterSurfaceMesh.cpp  waterSurfaceMesh.hpp
textures/: arrow.png~  hud.png~  night.ktx2  skybox.ktx2
